Use the square of the maximum viewport dimension for "max raster scale" during animations.

Currently, we use the actual viewport size (width * height), but compare it with the
maximum of the transform scale factor in any direction. This prevents animations up to
near the actual viewport size when the viewport aspect ratio is far from 1, because the
heuristically-computed "scale" of the image looks larger than the viewport.

Bug: 787524
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Idda22addcc989b97d4eeaa06807b7b5874433d5a
Reviewed-on: https://chromium-review.googlesource.com/782761
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518694}
Former-commit-id: ed7d4d2822d2974339093df4656c87dc2789d5bf